modifying the Home page

--- a/frontend/faculty.html
+++ b/frontend/faculty.html
@@ -43,14 +43,6 @@
             display: block;
         }
 
-        header.scrolled .logo-text h2 {
-            color: var(--primary);
-        }
-
-        header.scrolled .mobile-menu-toggle {
-            color: var(--primary);
-        }
-
         .mobile-menu-toggle {
             display: none;
             color: var(--white);
@@ -235,9 +227,8 @@
                 <a href="index.html" class="logo flex align-center">
                     <img src="assets/images/logo.png" alt="SVES Logo">
                     <div class="logo-text" style="margin-left: 15px;">
-                        <h2 style="color: var(--white); font-size: 1.5rem; line-height: 1;">SVES College</h2>
-                        <span
-                            style="color: var(--secondary); font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">Harugeri</span>
+                        <h2 class="logo-title">SVES College</h2>
+                        <span class="logo-subtitle">Harugeri</span>
                     </div>
                 </a>
 
@@ -256,9 +247,6 @@
                     <a href="student-corner.html">Student Corner</a>
                     <a href="notes.html">Notes & Resources</a>
                     <a href="gallery.html">Gallery</a>
-                    <a href="admin/login.html">Admin Login</a>
-                    <a href="admissions.html" class="btn btn-secondary"
-                        style="padding: 8px 20px; color: var(--primary) !important;">Apply Now</a>
                 </nav>
 
                 <div class="mobile-menu-toggle" id="mobile-toggle">
@@ -283,9 +271,6 @@
                 <a href="notes.html">Notes & Resources</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="placements.html">Placements</a>
-                <a href="admin/login.html">Admin Login</a>
-                <a href="admissions.html" class="btn btn-secondary" style="margin-top: 20px; text-align: center;">Apply
-                    Now</a>
             </div>
         </div>
     </header>
