--- a/frontend/about.html
+++ b/frontend/about.html
@@ -43,14 +43,6 @@
             display: block;
         }
 
-        header.scrolled .logo-text h2 {
-            color: var(--primary);
-        }
-
-        header.scrolled .mobile-menu-toggle {
-            color: var(--primary);
-        }
-
         .mobile-menu-toggle {
             display: none;
             color: var(--white);
@@ -189,9 +181,8 @@
                 <a href="index.html" class="logo flex align-center">
                     <img src="assets/images/logo.png" alt="SVES Logo">
                     <div class="logo-text" style="margin-left: 15px;">
-                        <h2 style="color: var(--white); font-size: 1.5rem; line-height: 1;">SVES College</h2>
-                        <span
-                            style="color: var(--secondary); font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">Harugeri</span>
+                        <h2 class="logo-title">SVES College</h2>
+                        <span class="logo-subtitle">Harugeri</span>
                     </div>
                 </a>
 
@@ -210,9 +201,6 @@
                     <a href="student-corner.html">Student Corner</a>
                     <a href="notes.html">Notes & Resources</a>
                     <a href="gallery.html">Gallery</a>
-                    <a href="admin/login.html">Admin Login</a>
-                    <a href="admissions.html" class="btn btn-secondary"
-                        style="padding: 8px 20px; color: var(--primary) !important;">Apply Now</a>
                 </nav>
 
                 <div class="mobile-menu-toggle" id="mobile-toggle">
@@ -237,9 +225,6 @@
                 <a href="notes.html">Notes & Resources</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="placements.html">Placements</a>
-                <a href="admin/login.html">Admin Login</a>
-                <a href="admissions.html" class="btn btn-secondary" style="margin-top: 20px; text-align: center;">Apply
-                    Now</a>
             </div>
         </div>
     </header>
@@ -281,9 +266,10 @@
                         </li>
                     </ul>
                 </div>
-                <div style="flex: 1; min-width: 300px; margin-left: 50px;" data-aos="fade-left">
-                    <img src="assets/images/campus-history.jpg" alt="Campus History"
-                        style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-lg);">
+                <div
+                    style="position: relative; border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-lg);">
+                    <video src="assets/images/SVES%20About.mp4" alt="video" autoplay muted loop controls
+                        style="width: 100%;height: 100%;"></video>
                 </div>
             </div>
         </div>
@@ -355,11 +341,11 @@
                     <p><i class="fas fa-map-marker-alt" style="color: var(--secondary); margin-right: 10px;"></i>
                         Harugeri, Karnataka 591220</p>
                     <p><i class="fas fa-phone"
-                            style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i> +91 80507 86198
+                            style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i> +91 80507 86197
                     </p>
                     <p><i class="fas fa-envelope"
                             style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i>
-                        info@svescollege.in</p>
+                        athanimallikarjun7@gmail.com</p>
                 </div>
             </div>
 
