--- a/frontend/courses.html
+++ b/frontend/courses.html
@@ -43,14 +43,6 @@
             display: block;
         }
 
-        header.scrolled .logo-text h2 {
-            color: var(--primary);
-        }
-
-        header.scrolled .mobile-menu-toggle {
-            color: var(--primary);
-        }
-
         .mobile-menu-toggle {
             display: none;
             color: var(--white);
@@ -152,14 +144,6 @@
 
         .dropdown:hover .dropdown-content {
             display: block;
-        }
-
-        header.scrolled .logo-text h2 {
-            color: var(--primary);
-        }
-
-        header.scrolled .mobile-menu-toggle {
-            color: var(--primary);
         }
 
         .mobile-menu-toggle {
@@ -302,9 +286,8 @@
                 <a href="index.html" class="logo flex align-center">
                     <img src="assets/images/logo.png" alt="SVES Logo">
                     <div class="logo-text" style="margin-left: 15px;">
-                        <h2 style="color: var(--white); font-size: 1.5rem; line-height: 1;">SVES College</h2>
-                        <span
-                            style="color: var(--secondary); font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">Harugeri</span>
+                        <h2 class="logo-title">SVES College</h2>
+                        <span class="logo-subtitle">Harugeri</span>
                     </div>
                 </a>
 
@@ -323,9 +306,6 @@
                     <a href="student-corner.html">Student Corner</a>
                     <a href="notes.html">Notes & Resources</a>
                     <a href="gallery.html">Gallery</a>
-                    <a href="admin/login.html">Admin Login</a>
-                    <a href="admissions.html" class="btn btn-secondary"
-                        style="padding: 8px 20px; color: var(--primary) !important;">Apply Now</a>
                 </nav>
 
                 <div class="mobile-menu-toggle" id="mobile-toggle">
@@ -350,9 +330,6 @@
                 <a href="notes.html">Notes & Resources</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="placements.html">Placements</a>
-                <a href="admin/login.html">Admin Login</a>
-                <a href="admissions.html" class="btn btn-secondary" style="margin-top: 20px; text-align: center;">Apply
-                    Now</a>
             </div>
         </div>
     </header>
@@ -370,7 +347,7 @@
             <div class="course-content">
                 <h3>Bachelor of Computer Applications (BCA)</h3>
                 <div class="course-meta">
-                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 4 Years</span>
                     <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
                 </div>
                 <p>Focuses on computer science fundamentals, software development, web technologies, and database
@@ -383,7 +360,7 @@
             <div class="course-content">
                 <h3>Bachelor of Commerce (B.Com)</h3>
                 <div class="course-meta">
-                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 4 Years</span>
                     <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
                 </div>
                 <p>A comprehensive program covering accounting, finance, taxation, business law, and management.
@@ -396,7 +373,7 @@
             <div class="course-content">
                 <h3>Bachelor of Science (B.Sc)</h3>
                 <div class="course-meta">
-                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 4 Years</span>
                     <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II Science</span>
                 </div>
                 <p>Offers specializations in Physics, Chemistry, Mathematics, and Computer Science. Emphasizes
@@ -409,7 +386,7 @@
             <div class="course-content">
                 <h3>Bachelor of Arts (BA)</h3>
                 <div class="course-meta">
-                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 4 Years</span>
                     <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
                 </div>
                 <p>Focuses on humanities, languages, and social sciences. Encourages critical thinking and deep
@@ -422,7 +399,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-about">
-                    <h3>SVES College</h3>
+                    <h3>SVES B R Darur First Grade,College</h3>
                     <p>Establishing excellence in higher education since 1983. Reaccredited with 'A' Grade by NAAC.</p>
                     <div class="social-icons" style="margin-top: 20px;">
                         <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-facebook"></i></a>
