--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,9 +28,8 @@
                 <a href="index.html" class="logo flex align-center">
                     <img src="assets/images/logo.png" alt="SVES Logo">
                     <div class="logo-text" style="margin-left: 15px;">
-                        <h2 style="color: var(--white); font-size: 1.5rem; line-height: 1;">SVES College</h2>
-                        <span
-                            style="color: var(--secondary); font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">Harugeri</span>
+                        <h2 class="logo-title">SVES College</h2>
+                        <span class="logo-subtitle">Harugeri</span>
                     </div>
                 </a>
 
@@ -50,8 +49,6 @@
                     <a href="notes.html">Notes & Resources</a>
                     <a href="gallery.html">Gallery</a>
                     <a href="admin/login.html">Admin Login</a>
-                    <a href="admissions.html" class="btn btn-secondary"
-                        style="padding: 8px 20px; color: var(--primary) !important;">Apply Now</a>
                 </nav>
 
                 <div class="mobile-menu-toggle" id="mobile-toggle">
@@ -76,9 +73,8 @@
                 <a href="notes.html">Notes & Resources</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="placements.html">Placements</a>
-                <a href="admin/login.html">Admin Login</a>
-                <a href="admissions.html" class="btn btn-secondary" style="margin-top: 20px; text-align: center;">Apply
-                    Now</a>
+                <a href="gallery.html">Gallery</a>
+                <a href="placements.html">Placements</a>
             </div>
         </div>
     </header>
@@ -112,10 +108,6 @@
 
         .dropdown:hover .dropdown-content {
             display: block;
-        }
-
-        header.scrolled .logo-text h2 {
-            color: var(--primary);
         }
 
         header.scrolled .mobile-menu-toggle {
@@ -206,8 +198,6 @@
                     1983.</p>
                 <div class="hero-btns">
                     <a href="admissions.html" class="btn btn-secondary">Join Now</a>
-                    <a href="admin/login.html" class="btn btn-outline" style="color: white; border-color: white;">Admin
-                        Login</a>
                 </div>
             </div>
         </div>
@@ -216,11 +206,12 @@
     <!-- Announcements Ticker -->
     <div class="ticker-wrap">
         <div class="container">
-            <div class="flex align-center">
-                <span
-                    style="background: var(--secondary); color: var(--primary); padding: 5px 15px; font-weight: 700; margin-right: 20px; border-radius: 4px;">LATEST</span>
-                <div class="ticker-content" id="announcements-ticker">
-                    <span>Loading announcements...</span>
+            <div class="ticker-container">
+                <span class="latest-badge">LATEST</span>
+                <div class="ticker-display">
+                    <div class="ticker-content" id="announcements-ticker">
+                        <span>Loading announcements...</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -262,8 +253,8 @@
     <!-- Why Choose Us -->
     <section class="section-padding">
         <div class="container">
-            <div class="flex align-center justify-between" style="flex-wrap: wrap;">
-                <div class="why-content" style="flex: 1; min-width: 300px;" data-aos="fade-right">
+            <div class="why-container">
+                <div class="why-content" data-aos="fade-right">
                     <div class="section-title" style="text-align: left;">
                         <h2 style="left: 0; transform: none;">Why Choose SVES?</h2>
                     </div>
@@ -297,10 +288,10 @@
                         </li>
                     </ul>
                 </div>
-                <div class="why-image" style="flex: 1; min-width: 300px; margin-left: 50px;" data-aos="fade-left">
+                <div class="why-image" data-aos="fade-left">
                     <div
                         style="position: relative; border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-lg);">
-                        <video src="../frontend/assets/images/SVES About.mp4" alt="video" autoplay muted loop controls
+                        <video src="assets/images/SVES%20About.mp4" alt="video" autoplay muted loop controls
                             style="width: 100%;height: 100%;"></video>
                         <div
                             style="position: absolute; bottom: 30px; left: 30px; background: var(--secondary); padding: 20px; border-radius: var(--radius-md); box-shadow: var(--shadow-md);">
