Fix broken image paths and use new Gemini-generated assets across site

--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -14,7 +14,7 @@
 
     <style>
         .notes-header {
-            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.8)), url('assets/images/notes-bg.jpg');
+            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.8)), url('assets/images/notes-bg.png');
             background-size: cover;
             background-position: center;
             padding: 150px 0 80px;
