--- a/frontend/about.html
+++ b/frontend/about.html
@@ -14,10 +14,10 @@
 
     <style>
         .about-hero {
-            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.8)), url('assets/images/about-bg.jpg');
+            background-image: linear-gradient(rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.7)), url('assets/images/about-bg.png');
             background-size: cover;
             background-position: center;
-            padding: 150px 0 80px;
+            padding: 150px 0 100px;
             color: var(--white);
             text-align: center;
         }
@@ -116,7 +116,7 @@
                         </ul>
                     </div>
                     <div style="flex: 1; min-width: 300px; margin-left: 50px;" data-aos="fade-left">
-                        <img src="assets/images/campus-history.jpg" alt="Campus History"
+                        <img src="assets/images/campus-history.png" alt="Campus History"
                             style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-lg);">
                     </div>
                 </div>
