--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
     <header id="main-header" class="fixed-top"></header>
 
     <!-- Hero Section -->
-    <section class="hero" id="hero-section" style="background-image: url('assets/images/campus-hero.jpg');">
+    <section class="hero" id="hero-section" style="background-image: url('assets/images/campus-hero.png');">
         <div class="container" data-aos="fade-up">
             <div class="hero-content">
                 <h1>Excellence in Education</h1>
@@ -128,7 +128,7 @@
                 <div class="why-image" style="flex: 1; min-width: 300px; margin-left: 50px;" data-aos="fade-left">
                     <div
                         style="position: relative; border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-lg);">
-                        <video src="../frontend/assets/images/SVES About.mp4" alt="video" autoplay muted loop controls
+                        <video src="assets/images/SVES About.mp4" alt="video" autoplay muted loop controls
                             style="width: 100%;height: 100%;"></video>
                         <div
                             style="position: absolute; bottom: 30px; left: 30px; background: var(--secondary); padding: 20px; border-radius: var(--radius-md); box-shadow: var(--shadow-md);">
@@ -179,6 +179,7 @@
                     ticker.innerHTML = '<span>🔔 Welcome to SVES College Harugeri!</span>';
                 }
 
+                /* 
                 // Load banner from gallery
                 const bannerRes = await fetch(API_BASE_URL + '/gallery/banners');
                 const banners = await bannerRes.json();
@@ -186,6 +187,7 @@
                     document.getElementById('hero-section').style.backgroundImage =
                         `url('${resolvePath(banners[0].image_path)}')`;
                 }
+                */
             } catch (error) {
                 console.error('Failed to load data:', error);
             }
