--- a/frontend/admin/manage-gallery.html
+++ b/frontend/admin/manage-gallery.html
@@ -140,7 +140,7 @@
             <a href="manage-gallery.html" class="active"><i class="fas fa-images"></i> Manage Gallery</a>
             <a href="manage-announcements.html"><i class="fas fa-bullhorn"></i> Announcements</a>
             <a href="manage-faculty.html"><i class="fas fa-user-tie"></i> Faculty</a>
-            <a href="#" onclick="logout()" style="margin-top: 50px; color: #ff6b6b;"><i class="fas fa-sign-out-alt"></i>
+            <a href="#" id="logout-btn" style="margin-top: 50px; color: #ff6b6b;"><i class="fas fa-sign-out-alt"></i>
                 Logout</a>
         </div>
     </div>
@@ -195,10 +195,21 @@
         </table>
     </div>
 
-    <script src="../assets/js/api.js"></script>
+    <script src="../assets/js/api.js?v=1.1"></script>
     <script>
         if (!isLoggedIn()) window.location.href = 'login.html';
-        function logout() { removeToken(); window.location.href = 'login.html'; }
+
+        // CSP-compliant logout handler
+        document.addEventListener('DOMContentLoaded', function () {
+            var logoutBtn = document.getElementById('logout-btn');
+            if (logoutBtn) {
+                logoutBtn.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    localStorage.clear();
+                    window.location.href = '../index.html';
+                });
+            }
+        });
 
         const alertEl = document.getElementById('alert');
         function showAlert(msg, err) { alertEl.textContent = msg; alertEl.className = 'alert' + (err ? ' error' : ''); alertEl.style.display = 'block'; setTimeout(() => alertEl.style.display = 'none', 3000); }
@@ -213,7 +224,7 @@
                         <td><img src="${resolvePath(img.image_path)}" class="img-preview" alt=""></td>
                         <td>${img.caption}</td>
                         <td><span class="badge">${img.category}</span></td>
-                        <td><a href="#" onclick="deleteImage(${img.id})" style="color: #d9534f;"><i class="fas fa-trash"></i> Delete</a></td>
+                        <td><a href="#" class="delete-btn" data-id="${img.id}" style="color: #d9534f;"><i class="fas fa-trash"></i> Delete</a></td>
                     </tr>
                 `).join('');
             } catch (e) {
@@ -222,6 +233,16 @@
                 list.innerHTML = '<tr><td colspan="4" style="text-align:center; color: red;">Failed to load gallery images. Please try again.</td></tr>';
             }
         }
+
+        // Event delegation for delete
+        document.getElementById('gallery-list').addEventListener('click', function (e) {
+            const btn = e.target.closest('.delete-btn');
+            if (btn) {
+                e.preventDefault();
+                const id = btn.getAttribute('data-id');
+                deleteImage(id);
+            }
+        });
 
         async function deleteImage(id) {
             if (!confirm('Are you sure?')) return;
