--- a/frontend/admin/manage-notes.html
+++ b/frontend/admin/manage-notes.html
@@ -134,7 +134,7 @@
             <a href="manage-gallery.html"><i class="fas fa-images"></i> Manage Gallery</a>
             <a href="manage-announcements.html"><i class="fas fa-bullhorn"></i> Announcements</a>
             <a href="manage-faculty.html"><i class="fas fa-user-tie"></i> Faculty</a>
-            <a href="#" onclick="logout()" style="margin-top: 50px; color: #ff6b6b;"><i class="fas fa-sign-out-alt"></i>
+            <a href="#" id="logout-btn" style="margin-top: 50px; color: #ff6b6b;"><i class="fas fa-sign-out-alt"></i>
                 Logout</a>
         </div>
     </div>
@@ -205,10 +205,21 @@
         </table>
     </div>
 
-    <script src="../assets/js/api.js"></script>
+    <script src="../assets/js/api.js?v=1.1"></script>
     <script>
         if (!isLoggedIn()) window.location.href = 'login.html';
-        function logout() { removeToken(); window.location.href = 'login.html'; }
+
+        // CSP-compliant logout handler
+        document.addEventListener('DOMContentLoaded', function () {
+            var logoutBtn = document.getElementById('logout-btn');
+            if (logoutBtn) {
+                logoutBtn.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    localStorage.clear();
+                    window.location.href = '../index.html';
+                });
+            }
+        });
 
         const alertEl = document.getElementById('alert');
         const courses = { 1: 'BCA', 2: 'BA', 3: 'B.Com', 4: 'B.Sc' };
@@ -234,7 +245,7 @@
                         <td>${formatDate(n.upload_date)}</td>
                         <td>
                             <a href="${resolvePath(n.file_path)}" target="_blank" style="color: var(--primary);"><i class="fas fa-eye"></i></a>
-                            <a href="#" onclick="deleteNote(${n.id})" style="color: #d9534f; margin-left: 15px;"><i class="fas fa-trash"></i></a>
+                            <a href="#" class="delete-btn" data-id="${n.id}" style="color: #d9534f; margin-left: 15px;"><i class="fas fa-trash"></i></a>
                         </td>
                     </tr>
                 `).join('');
@@ -244,6 +255,16 @@
                 list.innerHTML = '<tr><td colspan="6" style="text-align:center; color: red;">Failed to load notes. Please try again.</td></tr>';
             }
         }
+
+        // Event delegation for delete
+        document.getElementById('notes-list').addEventListener('click', function (e) {
+            const btn = e.target.closest('.delete-btn');
+            if (btn) {
+                e.preventDefault();
+                const id = btn.getAttribute('data-id');
+                deleteNote(id);
+            }
+        });
 
         async function deleteNote(id) {
             if (!confirm('Are you sure?')) return;
