Revert " chageses in header section with proper design (#16)"
This reverts commit 0bd46dd4a1d5b088472f9a48a006a3f044521b41.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -198,23 +198,16 @@
 
     <!-- Hero Section -->
     <section class="hero" id="hero-section" style="background-image: url('assets/images/campus-hero.png');">
-        <div class="container">
-            <div class="hero-content" data-aos="fade-right" data-aos-duration="1000">
-                <span class="hero-label"
-                    style="color: var(--secondary); font-weight: 700; letter-spacing: 2px; text-transform: uppercase; margin-bottom: 20px; display: block;">Welcome
-                    to SVES Harugeri</span>
-                <h1>Shaping Minds <br>Building Futures</h1>
-                <p>SVES B R Darur First Grade College Harugeri provides a transformative educational experience with a
-                    legacy of excellence since 1983.</p>
-                <div class="hero-btns" data-aos="fade-up" data-aos-delay="400">
-                    <a href="admissions.html" class="btn btn-secondary">Apply for Admission</a>
-                    <a href="about.html" class="btn btn-outline"
-                        style="border-color: var(--white); color: var(--white); margin-left: 10px;">Learn More</a>
+        <div class="container" data-aos="fade-up">
+            <div class="hero-content">
+                <h1>Excellence in Education</h1>
+                <p>Empowering Minds, Shaping Futures at SVES B R Darur First Grade, College Harugeri. A legacy of
+                    academic excellence since
+                    1983.</p>
+                <div class="hero-btns">
+                    <a href="admissions.html" class="btn btn-secondary">Join Now</a>
                 </div>
             </div>
-        </div>
-        <div class="hero-scroll-indicator">
-            <div class="mouse"></div>
         </div>
     </section>
 
@@ -266,58 +259,52 @@
     </section>
 
     <!-- Why Choose Us -->
-    <section class="section-padding bg-light">
+    <section class="section-padding">
         <div class="container">
             <div class="why-container">
                 <div class="why-content" data-aos="fade-right">
                     <div class="section-title" style="text-align: left;">
-                        <span
-                            style="color: var(--secondary); font-weight: 600; text-transform: uppercase; letter-spacing: 2px;">Why
-                            SVES?</span>
-                        <h2 style="left: 0; transform: none; display: block; margin-top: 10px;">The SVES Advantage</h2>
+                        <h2 style="left: 0; transform: none;">Why Choose SVES?</h2>
                     </div>
-                    <p style="margin-bottom: 30px; font-size: 1.1rem; color: var(--text-light); line-height: 1.8;">We
-                        provide an environment where students grow intellectually, physically, and spiritually through
-                        our specialized curriculum and state-of-the-art facilities.</p>
+                    <p style="margin-bottom: 30px; font-size: 1.1rem; color: var(--text-light);">We provide a holistic
+                        environment that foster physical, intellectual, and spiritual growth.</p>
 
-                    <div class="why-list">
-                        <div class="why-item">
-                            <i class="fas fa-award"></i>
+                    <ul class="why-list">
+                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                            <i class="fas fa-check-circle"
+                                style="color: var(--secondary); margin-right: 15px; font-size: 1.5rem;"></i>
                             <div>
-                                <h4>NAAC 'A' Accredited</h4>
-                                <p>Consistently maintaining high standards in educational quality and institutional
-                                    infrastructure.</p>
+                                <h4 style="color: var(--primary);">NAAC 'A' Accredited</h4>
+                                <p>Proven excellence in quality of education and infrastructure.</p>
                             </div>
-                        </div>
-                        <div class="why-item">
-                            <i class="fas fa-chalkboard-teacher"></i>
+                        </li>
+                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                            <i class="fas fa-check-circle"
+                                style="color: var(--secondary); margin-right: 15px; font-size: 1.5rem;"></i>
                             <div>
-                                <h4>Expert Mentorship</h4>
-                                <p>Learn from highly qualified educators with extensive research and industrial
-                                    experience.</p>
+                                <h4 style="color: var(--primary);">Experienced Faculty</h4>
+                                <p>Dedicated staff with M.Phil and Ph.D degrees for expert guidance.</p>
                             </div>
-                        </div>
-                        <div class="why-item">
-                            <i class="fas fa-microscope"></i>
+                        </li>
+                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                            <i class="fas fa-check-circle"
+                                style="color: var(--secondary); margin-right: 15px; font-size: 1.5rem;"></i>
                             <div>
-                                <h4>Modern Labs & Tech</h4>
-                                <p>Access to advanced laboratories and a digital library to support your academic
-                                    journey.</p>
+                                <h4 style="color: var(--primary);">Modern Facilities</h4>
+                                <p>Well-equipped labs, digital library, and sports complex.</p>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
                 <div class="why-image" data-aos="fade-left">
                     <div
                         style="position: relative; border-radius: var(--radius-lg); overflow: hidden; box-shadow: var(--shadow-lg);">
-                        <video src="assets/images/SVES About.mp4" autoplay muted loop controls
-                            style="width: 100%; display: block;"></video>
+                        <video src="assets/images/SVES About.mp4" alt="video" autoplay muted loop controls
+                            style="width: 100%;height: 100%;"></video>
                         <div
-                            style="position: absolute; bottom: 30px; left: 30px; background: var(--secondary); padding: 25px; border-radius: var(--radius-md); box-shadow: var(--shadow-md); border: 2px solid rgba(255,255,255,0.2);">
-                            <h2 style="color: var(--primary); font-size: 3rem; line-height: 1; margin: 0;">40+</h2>
-                            <p
-                                style="color: var(--primary); font-weight: 700; margin: 0; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 1px;">
-                                Years of Success</p>
+                            style="position: absolute; bottom: 30px; left: 30px; background: var(--secondary); padding: 20px; border-radius: var(--radius-md); box-shadow: var(--shadow-md);">
+                            <h2 style="color: var(--primary); font-size: 2.5rem; line-height: 1;">40+</h2>
+                            <p style="color: var(--primary); font-weight: 600;">Years of Excellence</p>
                         </div>
                     </div>
                 </div>
