Hover animation to footer

--- a/frontend/admissions.html
+++ b/frontend/admissions.html
@@ -289,12 +289,12 @@
                 <tbody>
                     <tr>
                         <td>BCA</td>
-                        <td>PU-II / 10+2 (Any stream)</td>
+                        <td>PU-II Science/Commerce</td>
                         <td>Marksheet, TC, Photos, Aadhar</td>
                     </tr>
                     <tr>
                         <td>B.Com</td>
-                        <td>PU-II / 10+2 (Any stream)</td>
+                        <td>PU-II Science/Commerce</td>
                         <td>Marksheet, TC, Photos, Aadhar</td>
                     </tr>
                     <tr>
