--- a/frontend/courses.html
+++ b/frontend/courses.html
@@ -347,8 +347,8 @@
             <div class="course-content">
                 <h3>Bachelor of Computer Applications (BCA)</h3>
                 <div class="course-meta">
-                    <span><i class="fas fa-calendar-alt"></i> Duration: 4 Years</span>
-                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II Science/Commerce</span>
                 </div>
                 <p>Focuses on computer science fundamentals, software development, web technologies, and database
                     management. Includes practical training in modern programming languages.</p>
@@ -361,7 +361,7 @@
                 <h3>Bachelor of Commerce (B.Com)</h3>
                 <div class="course-meta">
                     <span><i class="fas fa-calendar-alt"></i> Duration: 4 Years</span>
-                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
+                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II Science/Commerce</span>
                 </div>
                 <p>A comprehensive program covering accounting, finance, taxation, business law, and management.
                     Prepares students for roles in banking, insurance, and corporate sectors.</p>
