--- a/frontend/student-corner.html
+++ b/frontend/student-corner.html
@@ -255,25 +255,25 @@
                 <i class="fas fa-book-reader"></i>
                 <h3>Library Access</h3>
                 <p>Digital catalog and physical library resources. Access over 50,000 volumes and digital journals.</p>
-                <a href="#" class="btn btn-outline" style="margin-top: 20px;">Explore Portal</a>
+                <a href="notes.html" class="btn btn-outline" style="margin-top: 20px;">Explore Portal</a>
             </div>
 
             <div class="resource-card" data-aos="fade-up" data-aos-delay="100">
                 <i class="fas fa-calendar-check"></i>
                 <h3>Exam Timetable</h3>
                 <p>Stay updated with the latest semester examination schedules and internal assessment dates.</p>
-                <a href="#" class="btn btn-outline" style="margin-top: 20px;">View Schedule</a>
+                <a href="#notice-board" class="btn btn-outline" style="margin-top: 20px;">View Schedule</a>
             </div>
 
             <div class="resource-card" data-aos="fade-up" data-aos-delay="200">
                 <i class="fas fa-user-graduate"></i>
                 <h3>Scholarships</h3>
                 <p>Information on government and institutional scholarships available for deserving students.</p>
-                <a href="#" class="btn btn-outline" style="margin-top: 20px;">Apply Now</a>
+                <a href="admissions.html" class="btn btn-outline" style="margin-top: 20px;">Apply Now</a>
             </div>
         </div>
 
-        <div class="notice-board" data-aos="fade-up">
+        <div class="notice-board" data-aos="fade-up" id="notice-board">
             <h2 style="color: var(--primary); margin-bottom: 30px;"><i class="fas fa-bullhorn"
                     style="color: var(--secondary); margin-right: 15px;"></i>Important Notices</h2>
             <div id="student-notices">
