updating the college comparision card section

--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -25,6 +25,7 @@
             <a href="manage-alumni.html"><i class="fas fa-user-graduate"></i> Alumni Stories</a>
             <a href="manage-faq.html"><i class="fas fa-question-circle"></i> FAQ Manager</a>
             <a href="manage-downloads.html"><i class="fas fa-download"></i> Downloads</a>
+            <a href="manage-admissions.html"><i class="fas fa-user-plus"></i> Admissions</a>
             <a href="#" id="logout-btn" style="margin-top: 50px; color: #ff6b6b;"><i class="fas fa-sign-out-alt"></i>
                 Logout</a>
         </div>
